--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/10clouds/trivial#readme",
   "dependencies": {
+    "chai-as-promised": "^7.1.1",
     "truffle-hdwallet-provider": "0.0.3"
   }
 }
