--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate": "truffle migrate --network development",
+    "migrate-public": "truffle migrate --network ropsten",
+    "test": "truffle test --network development"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,7 @@
   },
   "homepage": "https://github.com/10clouds/trivial#readme",
   "dependencies": {
-    "chai-as-promised": "^7.1.1",
+    "truffle": "^3.4.5",
     "truffle-hdwallet-provider": "0.0.3"
   }
 }
