--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/10clouds/trivial#readme",
   "dependencies": {
+    "zeppelin-solidity": "^1.2.0",
     "truffle": "^3.4.5",
     "truffle-hdwallet-provider": "0.0.3"
   }
