--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "premigrate-public": "npm run clean",
     "migrate-public": "truffle migrate --network ropsten",
     "pretest": "npm run clean",
-    "test": "truffle test --network development",
-    "pretest-public": "npm run clean",
-    "test-public": "truffle test --network ropsten"
+    "test": "truffle test --network development"
   },
   "repository": {
     "type": "git",
